--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0"
   }
 }
