--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "Bahaa Salaymeh",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.4.0"
   },
   "devDependencies": {
     "eslint": "^8.40.0"
