--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^5.4.0"
+    "mongodb": "^5.4.0",
+    "slug": "^8.2.2"
   },
   "devDependencies": {
     "eslint": "^8.40.0"
