--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "This is my Blok Tech project",
   "main": "server.js",
   "scripts": {
+    "build": "npx sass scss:public/styles",
+    "watch": "npx sass --watch scss:public/styles",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.4.0",
+    "sass": "^1.62.1",
     "slug": "^8.2.2"
   },
   "devDependencies": {
