--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This is my Blok Tech project",
   "main": "server.js",
   "scripts": {
-    "build": "npx sass scss:public/styles",
-    "watch": "npx sass --watch scss:public/styles",
+    "build": "npx sass scss/index.scss public/styles/index.css",
+    "watch": "npx sass --watch scss/index.scss:public/styles/index.css",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
