--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^5.4.0",
+    "multer": "^1.4.5-lts.1",
     "sass": "^1.62.1",
     "slug": "^8.2.2"
   },
