--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "gsap": "^3.11.5",
     "mongodb": "^5.4.0",
     "multer": "^1.4.5-lts.1",
     "sass": "^1.62.1",
